--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-navigation/native": "^7.0.3",
+    "@react-navigation/native-stack": "^7.1.6",
     "@react-navigation/stack": "^7.0.5",
     "axios": "^1.7.7",
     "expo": "^52.0.9",
