--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react": "18.3.1",
     "react-native": "0.76.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
