--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-navigation/native": "^7.0.3",
+    "@react-navigation/bottom-tabs": "^7.0.12",
+    "@react-navigation/native": "^7.0.7",
     "@react-navigation/native-stack": "^7.1.6",
     "@react-navigation/stack": "^7.0.5",
     "axios": "^1.7.7",
@@ -23,8 +24,9 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.21.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "^3.16.3",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.3.0",
     "react-native-splash-screen": "^3.3.0",
