--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-calendars": "^1.1307.0",
+    "react-native-collapsible": "^1.6.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-fast-image": "^8.6.3",
