--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@rails/actioncable": "^6.1.710",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "^2.10.2",
     "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/native-stack": "^7.1.6",
     "@react-navigation/stack": "^7.0.5",
+    "@types/react-router": "^5.1.20",
+    "actioncable": "^5.2.8-1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
     "expo": "^52.0.9",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
-    "expo-location": "~18.0.2",
+    "expo-location": "~18.0.4",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-native": "0.76.2",
