--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.1.0",
     "@rails/actioncable": "^6.1.710",
-    "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.12",
+    "@react-navigation/material-top-tabs": "^7.2.13",
     "@react-navigation/native": "^7.0.7",
     "@react-navigation/native-stack": "^7.1.6",
     "@react-navigation/stack": "^7.0.5",
@@ -20,34 +22,43 @@
     "actioncable": "^5.2.8-1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.9",
-    "expo-font": "~13.0.1",
-    "expo-image-picker": "^16.0.3",
-    "expo-linear-gradient": "~14.0.1",
-    "expo-location": "~18.0.4",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.2",
+    "expo": "^53.0.0",
+    "expo-font": "~13.3.1",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-location": "~18.1.4",
+    "expo-navigation-bar": "~4.2.4",
+    "expo-notifications": "~0.31.2",
+    "expo-sms": "~13.1.4",
+    "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.7",
+    "jwt-decode": "^4.0.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-calendars": "^1.1307.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-element-dropdown": "^2.12.2",
-    "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "^2.21.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "1.18.0",
-    "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "^4.3.0",
+    "react-native-maps": "1.20.1",
+    "react-native-pager-view": "^6.7.1",
+    "react-native-paper": "^5.14.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-svg": "^15.11.2",
+    "react-native-tab-view": "^4.1.0",
+    "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.3.12",
-    "typescript": "^5.3.3"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
