prepare to release

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@rails/actioncable": "^6.1.710",
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.0.12",
     "@react-navigation/material-top-tabs": "^7.2.13",
@@ -22,6 +23,7 @@
     "actioncable": "^5.2.8-1",
     "axios": "^1.7.7",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "expo": "^53.0.0",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
@@ -36,6 +38,7 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-animatable": "^1.4.0",
+    "react-native-bars": "^2.4.3",
     "react-native-calendars": "^1.1307.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-dropdown-select-list": "^2.0.5",
