--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "expo": "^53.0.0",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.1.8",
+    "expo-device": "^7.1.4",
     "expo-font": "~13.3.1",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
@@ -35,6 +38,7 @@
     "expo-sms": "~13.1.4",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.7",
+    "jsqr": "^1.4.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-native": "^0.79.2",
@@ -51,6 +55,7 @@
     "react-native-maps": "1.20.1",
     "react-native-pager-view": "^6.7.1",
     "react-native-paper": "^5.14.0",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.10.0",
